--- a/src/components/Home/style.css
+++ b/src/components/Home/style.css
@@ -1,6 +1,5 @@
 .home-wrapper {
   display: flex;
-  height: 90%;
 }
 
 .overview-wrapper {
@@ -12,7 +11,6 @@
 }
 
 .summary-wrapper {
-  height: 100%;
   width: 70%;
   display: flex;
   flex-direction: column;
